# python-template

./: .gitignore  README.md  pyproject.toml  tox.ini
docs/: api.rst  conf.py  index.rst
myproject/: module.py
tests/: test_module.py  test_version.py
