[tool.poetry]
name = "myproject"
version = "0.1.0"
description = ""
authors = ["Martin Høy <marhoy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.5 || ^3.6 || ^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.0"		# pytest 5.x requires python >= 3.5
tox = "^3.13"
pytest-cov = "^2.7"
flake8 = "^3.7"
sphinx = "^2.2"		# sphinx 2.2 requires python >= 3.5
sphinx_rtd_theme = "^0.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

